# NXT-ROS

./: README.md
nxt/nxt_controllers/: manifest.xml
nxt/nxt_description/: CMakeLists.txt
nxt/nxt_description/meshes/: README
nxt/nxt_python/: Makefile  sensor.patch
nxt/nxt_python/patches/: brick.patch  digital.patch  nxt_filer.patch  nxt_push.patch  nxt_server.patch  nxt_test.patch
nxt/nxt_python/sensor_tests/: color_sensor_test.py  light_sensor_test.py  sound_sensor_test.py  test_sensors.py  ultrasonic_sensor_test.py
nxt/nxt_python/test_scripts/: color_sensor_test.py  light_sensor_test.py  motor_cont_test.py  motor_test.py  play_tone_test.py  sound_sensor_test.py  touch_sensor_test.py  ultrasonic_sensor_test.py
nxt/nxt_ros/: manifest.xml
nxt/nxt_ros/scripts/: nxt_ros.py
nxt/nxt_ros_test/: manifest.xml
nxt/nxt_ros_test/config/: nxt_robot.yaml
nxt/nxt_ros_test/launch/: test.launch
nxt/nxt_rviz_plugin/: CMakeLists.txt  manifest.xml  plugin_description.xml
nxt/nxt_rviz_plugin/scripts/: send_test_msgs.py
nxt/nxt_rviz_plugin/src/: nxt_color_display.cpp  nxt_color_display.h  nxt_color_visual.cpp  nxt_color_visual.h  nxt_ultrasonic_display.cpp  nxt_ultrasonic_display.h  nxt_ultrasonic_visual.cpp  nxt_ultrasonic_visual.h
nxt_apps/nxt_teleop/: CMakeLists.txt  manifest.xml
nxt_apps/nxt_teleop/src/: nxt_joy.cpp
